2008-07-07  Mark Ellis  <mark@mpellis.org.uk>

	* remove error code that is now present in libsynce

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number.
	* configure.ac.in: Upped deps on libsynce and librapi2.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* .cvsignore:
	* pixmaps/.cvsignore:
	* script/.cvsignore:
	* src/.cvsignore: Removed useless files.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* autogen.sh: Removed references to *.spec.in files.
	* gnomevfs.spec.in: Removed.

2008-02-13  Mark Ellis  <mark@mpellis.org.uk>

	* use a rapi connection per operation instead of globally
	* structure for multi device support
	* tidying up

2008-01-08  Mark Ellis  <mark@mpellis.org.uk>

	* added note in README about installation prefix

2007-09-04  Mark Ellis  <mark@mpellis.org.uk>

	* flag "SD-MMC Card" and "ROM Storage" as separate filesystems
	* return NOT_SUPPORTED for free space on SD card and ROM,
	   required call not implemented in librapi2

2007-08-30  Mark Ellis  <mark@mpellis.org.uk>

	* add plugin for trayicon to add server volume

2007-08-29  Mark Ellis  <mark@mpellis.org.uk>

	* implement get volume free space
	* minor fixes & logging in synce-in-computer-folder

2007-08-25  Mark Ellis  <mark@mpellis.org.uk>

	* build system cleanup, require gnomevfs 2.14
	* general tidy, minor fixes
	* fix to file info and permissions

2007-08-23  Mark Ellis  <mark@mpellis.org.uk>

	* use time_fields_from_filetime() instead of filetime_to_unix_time()

2007-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* corrections to src/Makefile.am

2007-05-09  Mark Ellis  <mark@mpellis.org.uk>
	* fixed invalid return in _open & _create if mode GENERIC_WRITE
	* added and tidied debugging output
	* added --without-verbose-debug to configure
	* fix var expansion for later autoconf version
	* fixed memory leak in close_dir
	* modified open_dir for Applications
	* added more error codes

2007-05-05  Mark Ellis  <mark@mpellis.org.uk>
